# A2A_MCP

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  structure-description.md
scripts/: run_local.sh  smoke_test.sh
src/agent_server/: __init__.py  agent.py  app.py  executor.py  logging.py  main.py  prompts.py  settings.py  state.py  tool_broker.py  trace.py
src/client/: cli.py  examples.md  settings.py
src/tool_server/: __init__.py  logging.py  schemas.py  server.py  settings.py
src/tool_server/adapters/: __init__.py  amap.py  openweather.py
src/tool_server/tools/: __init__.py  poi.py  time.py  weather.py
tests/: test_agent_tool_retry.py  test_contract.py  test_settings.py  test_smoke_cli.py  test_tools_unit.py
traces/: .gitkeep
