[project]
name = "a2a-mcp-demo"
version = "0.1.0"
description = "Single-agent demo with MCP tool server"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
